--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .header-color {
-  background: #16222A;
-  background: -webkit-linear-gradient(to right, rgb(58, 115, 93), #16222A);
-  background: linear-gradient(to right, rgb(28, 65, 50), #16222A);    
+  background: rgb(7, 14, 14);
+  color: white;  
 }
 
 .landing-body {
@@ -13,7 +12,7 @@
   width: 100%;
   height: 100%;
   justify-content: center;
-  padding-top: 15em;
+  padding-top: 5em;
 }
 
 .landing-grid {
@@ -73,4 +72,9 @@
   box-shadow: 0 9px 24px 0 rgba(0,0,0,0.43);
   width: 219px;
   height: 40px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
