--- a/src/App.css
+++ b/src/App.css
@@ -151,7 +151,7 @@
   overflow: hidden;
 }
 
-.css-picture {
+.css-cover-container {
   min-width: 163px;
   width: 163px;
   height: 248px;
@@ -159,7 +159,7 @@
   
 }
 
-.css-pictures {
+.css-cover-fill {
   contain: strict;
   position: absolute;
   width: 100%;
@@ -169,7 +169,7 @@
   
 }
 
-.css-movie {
+.css-cover {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -187,6 +187,7 @@
   margin-bottom: 12px;
   display: flex;
   flex-wrap: wrap;
+  font-size: 11px;
 }
 
 .css-overview {
